# ImageFC

./: .gitignore  CMakeLists.txt  README.md
examples/: batch.cpp  example.cpp  simple.cpp
src/: lib.cpp  lib.h
src/color/: rgbHist.cpp  rgbHist.h
src/flow/: mcmf.cpp  mcmf.h
src/hog/: HOGEncoder.cpp  HOGEncoder.h
src/io/: .gitattributes  stb_image.h
